# memoryescape

./: .gitignore  README.md  artdump.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/jvmtidmeo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/memoryescape/: MainActivity.kt  MineApp.kt
app/src/main/java/com/example/memoryescape/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: layout_second_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/jvmtidmeo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle.kts
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: CMakeLists.txt  entry.cpp  utils.h
mylibrary/src/main/java/com/example/mylibrary/: MemoryEscapeInit.java
